uridecodebin: Use the correct caps name for MS Smooth Streaming manifests

Thanks to John Chang <r97922153@gmail.com> for reporting.

https://bugzilla.gnome.org/show_bug.cgi?id=755098